# kba

./: .gitignore  Cargo.toml  README.md  build.rs
src/: frontend.rs  gba.rs  main.rs
src/arm/: mod.rs
src/arm/interpreter/: arm7tdmi.rs  mod.rs  thumb.rs
src/arm/jit/: arm7tdmi.rs  mod.rs  thumb.rs
src/mmu/: bus.rs  dma.rs  game_pak.rs  io.rs  irq.rs  mod.rs  timer.rs
src/ppu/: lcd.rs  mod.rs  sprite.rs
