[package]
name = "kba"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
derivative = "2.2.0"
derive_more = "0.99.17"
itertools = "0.11.0"
paste = "1.0.14"
proc-bitfield = "0.3.0"
sdl2 = "0.35.2"
seq-macro = "0.3.5"
