[package]
name = "kba"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
cranelift = "0.105.0"
cranelift-jit = "0.105.0"
cranelift-module = "0.105.0"
cranelift-native = "0.105.0"
derivative = "2.2.0"
itertools = "0.11.0"
paste = "1.0.14"
proc-bitfield = "0.3.0"
sdl2 = { version = "0.36.0", features = ["static-link", "bundled"] }
seq-macro = "0.3.5"
target-lexicon = "0.12.13"
